# PlotEngine

./: .gitignore  Agents.md  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  vcpkg-configuration.json  vcpkg.json
docs/: external-library-candidates.md  module-architecture.md
resources/: appicon.rc  resources.qrc
scripts/examples/: normalize_project.py
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/ai/: aidataaction.h  aidataaction.ixx  airequest.cpp  airequest.h  anthropicprovider.cpp  anthropicprovider.h  batchgenerator.cpp  batchgenerator.h  contextbuilder.ixx  iaiprovider.cpp  iaiprovider.h  openaiprovider.cpp  openaiprovider.h  revisiondiff.cpp  revisionprompt.cpp  revisionprompt.cppm  revisionprompt.h  revisionprompt_helpers.cpp  revisionprompt_helpers.h  revisionprompt_impl.cppm  revisionprompt_textbuilder.h  secretstore.cppm  secretstore.h  veniceprovider.cpp  veniceprovider.h
src/app/: application.cppm  metadata.h  metadata.ixx
src/core/: autosaver.cpp  autosaver.h  autosaver.ixx  documentcommands.h  documentcommands.ixx  novelproject.cpp  novelproject.h  novelproject.ixx  projectmanager.cpp  projectmanager.h  projectmanager.ixx  revisionmanager.h  revisionmanager.ixx  revisionstore.h  revisionstore.ixx  textutils.h  textutils.ixx
src/editor/: noveleditor.cpp  noveleditor.h  syntaxhighlighter.cpp  syntaxhighlighter.h
src/export/: textexporter.ixx
src/panels/: notepanel.cpp  notepanel.h  protectedsnippetpanel.cpp  protectedsnippetpanel.h  reviewpanel.cpp  reviewpanel.h  revisionhistorypanel.cpp  revisionhistorypanel.h  sceneboardpanel.cpp  sceneboardpanel.h  searchpanel.cpp  searchpanel.h  structurepanel.cpp  structurepanel.h
src/scripting/: pythonscriptrunner.cpp  pythonscriptrunner.h
src/ui/: dockpane.cpp  dockpane.h  iconfactory.cppm  iconfactory.h
src/widgets/: textcompareview.cpp  textcompareview.h
tools/: generate_app_icon.py
